css/styles.css
body {
  max-width: 100%;
  overflow-x: hidden;
}

h1 {
  font-family: "Montserrat Extra-light 200";
  font-size: 1.6rem;
  line-height: 1.5;
  text-align: justify;
}

a {
  font-family: "Montserrat Extra-light 200";
}

p {
  font-family: "Montserrat Extra-light 200";
  font-size: 1.6rem;
}

h2, h3, h4, h5, h6 {
  font-family: "Montserrat-Bold";
  font-size: 1.7rem;
}

.container-fluid {
  padding: 10% 0%;
}

.container-fluid-papers {
  padding: 0% 0%;
}


.container-fluid.papers {
  padding: 2% 0%;
}

.navbar {
  padding: 0% 10%;
  z-index: 2;
}

.close-navbar-toggler {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 1;
  cursor: pointer;
}

.close-navbar-toggler.collapsed {
  z-index: -1;
}

.navbar-brand {
  font-family: "Montserrat-Bold";
  font-size: 1.8rem;
}

.nav-link {
  font-family: "Montserrat-Bold";
  font-size: 1.4rem;
}

.row {
  padding: 5% 10%;
}

.btn {
  font-size: 1.5rem;;
}

.card.profiles {
  margin-left: 35%;
  display: inline-block;
  border-radius: 300px;
}

.img-first {
  max-width: 100%;
  border-radius: 300px;
}

.card.profiles .img-top {
  border-radius: 300px;
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

.card.profiles:hover .img-top {
  border-radius: 300px;
  display: inline;
}

a:link {
  text-decoration: none;
}

.link-dark {
  color: #1E90FF;
}

.link-dark:hover {
  color: gray;
}

.link-website {
  font-size: 1.5rem;
  color: black;
}

.link-website:hover {
  color: black;
}

.paper-abstract {
  text-align: justify;
}

.card-link {
  font-size: 1.5rem;
}

p.card-text.paper-info {
  padding: 2% 0%;
  text-align: justify;
}
.paper-name {
  font-family: "Montserrat Extra-light 200";
  padding: 0% 0% 0% 15%;
  font-size: 1.2rem;
  line-height: 2.0;
}

.paper-authors {
  padding: 0% 0% 0% 15%;
  font-family: "Montserrat Extra-light 200";
  font-size: 1.4rem;
  line-height: 2.0;
}

.paper-conf {
  padding: 0% 0% 0% 15%;
  font-family: "Montserrat Extra-light 200";
  font-size: 1.5rem;
  line-height: 2.0;
}

.section-heading {
  font-size: 1.7rem;
  padding: 0% 10%;
}

.subsection-heading {
  font-size: 1.6rem;
  padding: 0% 10%;
}

.subsection-heading-papers {
  font-size: 1.6rem;
  padding: 0% 10%;
}

em {
  font-weight: bold;
  font-family: "Montserrat Extra-light 200";
}

.paper-info {
  text-align: left;
  font-family: "Montserrat Extra-light 200";
  font-size: 1.5rem;
}


.white-section {
  background-color: #fff;
}

.social-icon {
  margin: 20px 10px;
}

#footer {
  text-align: center;
}

#copyright {
  padding: 10% 0% 0% 0%;
  color: #8f8f8f;
}

.copyright-text {
  font-size: 1.0rem;
}

.card {
  font-size: 1.3rem;
}

